--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10602,6 +10602,8 @@ img {
   background: #000;
   padding: 0 24px;
   height: 46px;
+  position: relative;
+  z-index: 4;
 }
 @media (max-width: 1100px) {
   #main-header {
@@ -10642,11 +10644,11 @@ img {
 }
 #main-header .navbar .navbar-brand {
   margin-right: 0;
-  font: 1.432rem/1.24 "Brandon Bold";
+  font: 1.3rem/1.24 "Brandon Bold";
 }
 @media (max-width: 1100px) {
   #main-header .navbar .navbar-brand {
-    font: 1.3rem/1 "Brandon Bold";
+    font: 1.1rem/1 "Brandon Bold";
   }
 }
 @media (min-width: 1860px) {
@@ -10699,6 +10701,7 @@ img {
   width: 0;
   text-transform: initial;
   font: 16px/48px "Brandon Medium";
+  height: 48px;
   display: block;
   position: relative;
 }
@@ -11010,15 +11013,25 @@ img {
   align-items: center;
   flex-direction: row;
   justify-content: flex-end;
-  max-width: 75%;
+  max-width: 86%;
+}
+@media (max-width: 1100px) {
+  #main-content #main-hola .section-overlay {
+    max-width: 86%;
+  }
+}
+@media (min-width: 1860px) {
+  #main-content #main-hola .section-overlay {
+    max-width: 75%;
+  }
 }
 #main-content #main-hola .section-overlay .text-overlay {
   max-width: 370px;
-  font: 20px/40px "Libre Baskerville Italic";
+  font: 20px/30px "Libre Baskerville Italic";
 }
 @media (max-width: 1100px) {
   #main-content #main-hola .section-overlay .text-overlay {
-    font: 18px/46px "Brandon Bold";
+    font: 18px/28px "Libre Baskerville Italic";
   }
 }
 @media (min-width: 1860px) {
@@ -11171,7 +11184,7 @@ img {
 }
 #main-content #main-rutas .col-img {
   max-height: 794px;
-  flex: 0 0 45%;
+  flex: 0 0 42%;
 }
 @media (max-width: 1100px) {
   #main-content #main-rutas .col-img {
@@ -11191,7 +11204,7 @@ img {
   align-self: center;
   max-height: 774px;
   text-align: center;
-  flex: 0 0 16%;
+  flex: 0 0 19%;
 }
 @media (max-width: 1100px) {
   #main-content #main-rutas .col-menu {
@@ -11221,12 +11234,12 @@ img {
   }
 }
 #main-content #main-rutas .col-menu .rutas-menu li a {
-  font: 20px/40px "Brandon Medium";
+  font: 19px/30px "Brandon Medium";
   color: #000;
 }
 @media (max-width: 1100px) {
   #main-content #main-rutas .col-menu .rutas-menu li a {
-    font: 18px/40px "Brandon Medium";
+    font: 18px/30px "Brandon Medium";
   }
 }
 @media (min-width: 1860px) {
