--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -132,6 +132,8 @@ img {
     background: $black;
     padding: 0 24px;
     height: 46px;
+    position: relative;
+    z-index: 4;
 
     @media (max-width: 1100px) {
         padding: 0 18px;
@@ -168,10 +170,10 @@ img {
 
         .navbar-brand {
             margin-right: 0;
-            font: 1.432rem/1.24 "Brandon Bold";
+            font: 1.3rem/1.24 "Brandon Bold";
 
             @media (max-width: 1100px) {
-                font: 1.3rem/1 "Brandon Bold";
+                font: 1.1rem/1 "Brandon Bold";
             }
 
             @media (min-width: 1860px) {
@@ -225,6 +227,7 @@ img {
                         width: 0;
                         text-transform: initial;
                         font: 16px/48px "Brandon Medium";
+                        height: 48px;
 
                         @media (max-width: 1100px) {
                             font: 13px/48px "Brandon Medium";
@@ -594,14 +597,20 @@ img {
             align-items: center;
             flex-direction: row;
             justify-content: flex-end;
-            max-width: 75%;
+            max-width: 86%;
 
+            @media (max-width: 1100px) {
+                max-width: 86%;
+            }
+            @media (min-width: 1860px) { 
+                max-width: 75%;
+            }
             .text-overlay {
                 max-width: 370px;
-                font: 20px/40px "Libre Baskerville Italic";
+                font: 20px/30px "Libre Baskerville Italic";
 
                 @media (max-width: 1100px) {
-                    font: 18px/46px "Brandon Bold";
+                    font: 18px/28px "Libre Baskerville Italic";
                 }
 
                 @media (min-width: 1860px) {
@@ -774,7 +783,7 @@ img {
 
         .col-img {
             max-height: 794px;
-            flex: 0 0 45%;
+            flex: 0 0 42%;
 
             @media (max-width: 1100px) {
                 flex: 0 0 40%;
@@ -795,7 +804,7 @@ img {
             align-self: center;
             max-height: 774px;
             text-align: center;
-            flex: 0 0 16%;
+            flex: 0 0 19%;
 
             @media (max-width: 1100px) {
                 flex: 0 0 21%;
@@ -826,10 +835,10 @@ img {
             .rutas-menu {
                 li {
                     a {
-                        font: 20px/40px "Brandon Medium";
+                        font: 19px/30px "Brandon Medium";
 
                         @media (max-width: 1100px) {
-                            font: 18px/40px "Brandon Medium";
+                            font: 18px/30px "Brandon Medium";
                         }
 
                         @media (min-width: 1860px) {
@@ -1259,9 +1268,11 @@ img {
         border-radius: 0 !important;
         padding: 0 !important;
         height: auto;
+
         @media (max-width: 1800px) {
             height: 700px;
         }
+
         @media (max-width: 1100px) {
             height: 574px;
         }
@@ -1275,17 +1286,21 @@ img {
             padding: 0 !important;
             position: relative;
             height: auto;
+
             @media (max-width: 1800px) {
                 height: 700px;
             }
+
             @media (max-width: 1100px) {
                 height: 574px;
             }
+
             @media (min-width: 1860px) {
                 height: 774px;
             }
+
             .caption {
-                color: $white;  
+                color: $white;
                 margin: 0;
                 font: 13px "Brandon Medium";
                 position: absolute;
